# grok-register

./: .gitignore  README.md  config.example.json  pyproject.toml  register_cli.py
docs/: PACKAGED_README.md  RUN_LOCAL.md  batch-speed.md  export-cpa-and-sub2api.md  grok-403-investigation.md  ops-log.md  registration.md
scripts/: backfill_cpa_xai_from_accounts.py  cpa_probe_and_exclude_models.sh  export_cpa_xai_from_grok_auth.py  optimization_checks.py  run_cli_manual_once.ps1  verify_config_safe.ps1  verify_config_safe.py
src/grok_register/: __init__.py  __main__.py  browser_api.py  cli.py  core.py  effects_api.py  engine.py  flow_api.py  mail_api.py  menu.py  metrics.py  paths.py  side_effects.py  types.py
src/grok_register/browser/: __init__.py  cf_prewarm.py
src/grok_register/export/: __init__.py  cpa_export.py  cpa_to_sub2api.py
src/grok_register/export/cpa_xai/: browser_confirm.py  mint.py  oauth_device.py  probe.py  proxyutil.py  (+2 more)
src/grok_register/mail/: __init__.py  pool.py
src/grok_register/proxy/: __init__.py  local_auth.py  pool.py
src/grok_register/transport/: __init__.py  base.py  browser.py
tests/: conftest.py  test_cf_prewarm.py  test_cloudflare_admin_api.py  test_cpa_cloud_upload.py  test_cpa_proxy_opener.py  test_cpa_sub2api_export.py  test_cpa_to_sub2api.py  test_entry_engine_wiring.py  test_export_batch_and_upload_select.py  test_grok2api_remote_pool.py  test_lifecycle_api.py  test_mail_pool.py  test_menu_wiring.py  test_progress_label.py  test_proxy_health.py  test_proxy_pool.py  test_sub2api_cloud_upload.py  test_tempmail_lol.py
(+1 files in other folders)
