[project]
name = "grok-register"
version = "1.0.0"
description = "Grok 注册机（Chrome + DrissionPage + Turnstile）"
requires-python = ">=3.13,<3.14"
dependencies = [
    "DrissionPage>=4.1",
    "curl_cffi>=0.7",
]

[project.scripts]
grok-register = "grok_register.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_register"]

[tool.hatch.build.targets.sdist]
include = [
  "src/grok_register",
  "README.md",
  "LICENSE",
]

# Application-friendly: keep using path injection; package install optional
[tool.uv]
package = false
